--- a/event-bus/dockerfile
+++ b/event-bus/dockerfile
@@ -1,6 +1,7 @@
-FROM node:alpine
+FROM node:18
 WORKDIR /app
-COPY package.json .
+COPY package*.json ./
 RUN npm install
 COPY . .
-CMD ["npm", "start"]
+EXPOSE 4005
+CMD ["node", "index.js"]
