--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,15 +1,10 @@
 FROM node:18 AS builder
-
 WORKDIR /app
 COPY . .
- 
 RUN npm install
 RUN npm run build
 
 FROM nginx:alpine
-
 COPY --from=builder /app/build /usr/share/nginx/html
-
-EXPOSE 3000
-
+COPY default.conf /etc/nginx/conf.d/default.conf
 CMD ["nginx", "-g", "daemon off;"]
