--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -2,34 +2,48 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-srv
+  annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  ingressClassName: nginx
   rules:
     - host: posts.com
       http:
         paths:
           - path: /posts/create
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: posts-clusterip-srv
                 port:
                   number: 4000
           - path: /posts
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: query-srv
                 port:
                   number: 4002
           - path: /posts/?(.*)/comments
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: comments-srv
                 port:
                   number: 4001
           - path: /?(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: client-srv
+                port:
+                  number: 3000
+    - host: localhost
+      http:
+        paths:
+          - path: /?(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: client-srv
