--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -2,48 +2,35 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-srv
-  annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
   rules:
-    - host: posts.com
+    - host: localhost
       http:
         paths:
           - path: /posts/create
-            pathType: ImplementationSpecific
+            pathType: Prefix
             backend:
               service:
                 name: posts-clusterip-srv
                 port:
                   number: 4000
           - path: /posts
-            pathType: ImplementationSpecific
+            pathType: Prefix
             backend:
               service:
                 name: query-srv
                 port:
                   number: 4002
           - path: /posts/?(.*)/comments
-            pathType: ImplementationSpecific
+            pathType: Prefix
             backend:
               service:
                 name: comments-srv
                 port:
                   number: 4001
-          - path: /?(.*)
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: client-srv
-                port:
-                  number: 3000
-    - host: localhost
-      http:
-        paths:
-          - path: /?(.*)
-            pathType: ImplementationSpecific
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: client-srv
